--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
       - 'go.mod'
       - 'go.sum'
   workflow_run:
-    workflows: ['Update theme']
+    workflows: ['Update FixIt-bundle']
     types:
       - completed
   workflow_dispatch:
