--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -20,8 +20,8 @@ jobs:
           hugo-version: latest
           extended: true
 
-      - name: Update theme
-        run: hugo mod get -u github.com/hugo-fixit/FixIt@latest
+      - name: Update FixIt-bundle
+        run: hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
 
       - name: Tidy go.mod, go.sum
         run: hugo mod tidy
@@ -29,5 +29,5 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: ':arrow_up: Chore(theme): update FixIt version'
+          commit_message: ':arrow_up: Chore(modules): update FixIt-bundle version'
           commit_author: 'github-actions[bot] <github-actions[bot]@users.noreply.github.com>'
