--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,18 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/deploy.yml'
+      - '.github/workflows/update-modules.yml'
+      - 'archetypes/**'
       - 'assets/**'
       - 'config/**'
       - 'content/**'
       - 'data/**'
+      - 'i18n/**'
+      - 'layouts/**'
       - 'static/**'
       - 'themes/**'
+      - 'config.toml'
+      - 'hugo.toml'
       - 'go.mod'
       - 'go.sum'
   workflow_run:
