--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hugo-fixit-starter",
+  "name": "hugo-fixit-firebase",
   "version": "1.0.0",
   "description": "This is a quick start template for Hugo theme [FixIt](https://github.com/hugo-fixit/FixIt). It uses [Hugo submodule](https://gohugo.io/hugo-modules/) feature to load the theme.",
   "main": "index.js",
@@ -8,16 +8,16 @@
     "server": "hugo server -D --disableFastRender --navigateToChanged --bind 0.0.0.0 -O",
     "server:production": "npm run server -- --environment production",
     "server:development": "HUGO_MODULE_WORKSPACE=hugo.work npm run server -- --ignoreVendorPaths \"**\"",
-    "update:theme": "hugo mod get -u github.com/hugo-fixit/FixIt@latest && hugo mod tidy"
+    "update:modules": "hugo mod get -u github.com/hugo-fixit/fixit@latest && hugo mod tidy && hugo mod graph"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hugo-fixit/hugo-fixit-starter.git"
+    "url": "git+https://github.com/attajak/hugo-fixit-firebase.git"
   },
-  "author": "Lruihao (https://github.com/Lruihao)",
+  "author": "attajak (https://github.com/attajak)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hugo-fixit/hugo-fixit-starter/issues"
+    "url": "https://github.com/attajak/hugo-fixit-firebase/issues"
   },
-  "homepage": "https://github.com/hugo-fixit/hugo-fixit-starter#readme"
+  "homepage": "https://github.com/attajak/hugo-fixit-firebase#readme"
 }
