--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '.github/workflows/deploy.yml'
-      - '.github/workflows/update-modules.yml'
+      - '.github/workflows/**'
       - 'archetypes/**'
       - 'assets/**'
       - 'config/**'
