--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,7 +5,7 @@
 
 [[main]]
   identifier = "archives"
-  parent = ""
+  parent = "posts"
   # you can add extra information before the name (HTML format is supported), such as icons
   pre = ""
   # you can add extra information after the name (HTML format is supported), such as icons
@@ -14,7 +14,7 @@
   url = "/archives/"
   # title will be shown when you hover on this menu link
   title = ""
-  weight = 1
+  weight = 21
   # FixIt 0.2.14 | NEW add user-defined content to menu items
   [main.params]
     # add css class to a specific menu item
@@ -27,23 +27,67 @@
     type = ""
 [[main]]
   identifier = "categories"
-  parent = ""
+  parent = "posts"
   pre = ""
   post = ""
   name = "Categories"
   url = "/categories/"
   title = ""
-  weight = 2
+  weight = 22
   [main.params]
     icon = "fa-solid fa-folder-tree"
 [[main]]
   identifier = "tags"
-  parent = ""
+  parent = "posts"
   pre = ""
   post = ""
   name = "Tags"
   url = "/tags/"
   title = ""
-  weight = 3
+  weight = 23
   [main.params]
     icon = "fa-solid fa-tags"
+[[main]]
+  identifier = "home"
+  parent = ""
+  pre = ""
+  post = ""
+  name = "Home"
+  url = "/"
+  title = ""
+  weight = 1
+  [main.params]
+    icon = "fa-solid fa-home"
+[[main]]
+  identifier = "posts"
+  parent = ""
+  pre = ""
+  post = ""
+  name = "Posts"
+  url = "/posts/"
+  title = ""
+  weight = 2
+  [main.params]
+    icon = "fa-solid fa-pen"
+[[main]]
+  identifier = "about"
+  parent = ""
+  pre = ""
+  post = ""
+  name = "About"
+  url = "/about/"
+  title = ""
+  weight = 3
+  [main.params]
+    icon = "fa-solid fa-signature"
+[[main]]
+  identifier = "contact"
+  parent = ""
+  pre = ""
+  post = ""
+  name = "Contact"
+  url = "/contact/"
+  title = ""
+  weight = 4
+  [main.params]
+    icon = "fa-solid fa-envelope"
