--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "attajak (https://github.com/attajak)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/attajak/hugo-fixit-firebase/issues"
+    "url": "https://github.com/attajak/attajak.web.app/issues"
   },
   "homepage": "https://github.com/attajak/attajak.web.app#readme"
 }
