--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -21,7 +21,7 @@ jobs:
           extended: true
 
       - name: Update modules
-        run: hugo mod get -u # github.com/hugo-fixit/fixit-bundle@latest
+        run: hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
 
       - name: Tidy go.mod, go.sum
         run: hugo mod tidy
@@ -32,5 +32,5 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: ":arrow_up: Chore(modules): update modules version"
+          commit_message: ":arrow_up: Chore(modules): Update modules version"
           commit_author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
