--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,7 +22,7 @@ jobs:
           key: ${{ env.cache-name }}
       - uses: actions/setup-go@v5
         with:
-          go-version: "^1.17.0"
+          go-version: "^1.23.0"
       - run: go version
       - name: Cache Go Modules
         uses: actions/cache@v4
@@ -36,7 +36,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: latest
+          hugo-version: 0.139.4 # latest
           extended: true
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
