--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: latest
+          hugo-version: 0.139.4 # Default "latest"
           extended: true
 
       - name: Update modules
