--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ on:
       - 'go.mod'
       - 'go.sum'
   workflow_run:
-    workflows: ['Update modules']
+    workflows: ['Update hugo modules']
     types:
       - completed
   workflow_dispatch:
