--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -1,4 +1,4 @@
-name: Update modules
+name: Update hugo modules
 
 # Controls when the workflow will run
 on:
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Update-modules:
+  update-hugo-modules:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
@@ -17,11 +17,11 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: 0.139.4 # Default "latest"
+          hugo-version: 0.139.4 #"latest"
           extended: true
 
-      - name: Update modules
-        run: hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
+      - name: Update hugo modules
+        run: hugo mod get -u # github.com/hugo-fixit/fixit-bundle@latest
 
       - name: Tidy go.mod, go.sum
         run: hugo mod tidy
@@ -32,5 +32,5 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: ":arrow_up: Chore(modules): Update modules version"
+          commit_message: ":arrow_up: Chore(modules): Update hugo modules"
           commit_author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
