--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "hugo server -D --disableFastRender --navigateToChanged --bind 0.0.0.0 -b http://localhost/ --logLevel info -O",
     "server:production": "npm run server -- --environment production",
     "server:development": "HUGO_MODULE_WORKSPACE=hugo.work npm run server -- --ignoreVendorPaths \"**\"",
-    "update": "hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph"
+    "update": "hugo mod get -u && hugo mod tidy && hugo mod graph"
   },
   "repository": {
     "type": "git",
