--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: 0.139.4 # latest
+          hugo-version: latest
           extended: true
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
