--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "This is a quick start template for Hugo theme [FixIt](https://github.com/hugo-fixit/FixIt). It uses [Hugo submodule](https://gohugo.io/hugo-modules/) feature to load the theme.",
   "main": "index.js",
   "scripts": {
+    "create": "hugo new content",
     "build": "hugo --gc --minify --logLevel info",
     "server": "hugo server -D --disableFastRender --navigateToChanged --bind 0.0.0.0 -b http://localhost/ --logLevel info -O",
     "server:production": "npm run server -- --environment production",
     "server:development": "HUGO_MODULE_WORKSPACE=hugo.work npm run server -- --ignoreVendorPaths \"**\"",
-    "update": "hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph"
+    "update": "echo 'Upgrade FixIt-bundle' && hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && echo 'Clean old modules' && hugo mod tidy && echo 'List of Hugo modules' && hugo mod graph"
   },
   "repository": {
     "type": "git",
