--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "create": "hugo new content",
     "build": "hugo --gc --minify --logLevel info",
-    "server": "hugo server -D --disableFastRender --navigateToChanged --bind 0.0.0.0 -b http://localhost/ --logLevel info -O",
+    "server": "hugo server -D --disableFastRender --navigateToChanged --renderToMemory --bind 0.0.0.0 -b http://localhost/ --logLevel info -O",
     "server:production": "npm run server -- --environment production",
     "server:development": "HUGO_MODULE_WORKSPACE=hugo.work npm run server -- --ignoreVendorPaths \"**\"",
-    "update": "hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && echo 'Upgraded' && hugo mod tidy && echo 'Remove unused entries in go.mod and go.sum' && echo 'Module dependency graph with information about module status (disabled, vendored).' && hugo mod graph"
+    "update:modules": "hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph"
   },
   "repository": {
     "type": "git",
