Fix baseURL in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
           hugo-version: latest
           extended: true
       - name: Hugo build
-        run: hugo --gc --minify --logLevel info --baseURL ${{ steps.deployment.outputs.page_url }}
+        run: hugo --gc --minify --logLevel info --baseURL https://attajak.github.io/attajak-web-app/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
