--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -570,6 +570,10 @@ disableThemeInject = false
     "inject/cmpt-translate.html",
     "inject/shortcode-caniuse.html",
   ]
+  postTocBefore = []
+  postTocAfter = []
+  postContentBefore = []
+  postContentAfter = []
   postFooterBefore = []
   postFooterAfter = []
 
@@ -607,7 +611,7 @@ disableThemeInject = false
 
 # Content adapters config for component projects
 [projectsAdapters]
-  enable = false
+  enable = true
   # Whether to show only public repos
   onlyPublic = true
   # Default categories and collections
