--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -39,7 +39,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: latest
+          # use the environment variable HUGO_VERSION as the hugo version, if not set, use `latest`.
+          hugo-version: ${{ vars.HUGO_VERSION || 'latest' }}
           extended: true
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
