--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -17,11 +17,12 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: "latest"
+          # use the environment variable HUGO_VERSION as the hugo version, if not set, use `latest`.
+          hugo-version: ${{ vars.HUGO_VERSION || 'latest' }}
           extended: true
 
       - name: Update hugo modules
-        run: hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
+        run: hugo mod get -u
 
       - name: Tidy go.mod, go.sum
         run: hugo mod tidy
