--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,20 +1,10 @@
-- title: My developed
-  description: Below are some open source works I have developed.
-  contentAdapters: false
+- title: Attajak Janrak
+  description: GitHub Pages
+  contentAdapters: true
   categories:
-    - foo
+    - Pages
   collections:
-    - developed
-  totalStars: false # whether to count total stars
+    - GitHub
+  totalStars: true # whether to count total stars
   repos:
-    - hugo-fixit/FixIt
-- title: My contributed
-  description: Below are some open source works I have contributed to.
-  contentAdapters: false
-  categories:
-    - bar
-  collections:
-    - contributed
-  totalStars: false
-  repos:
-    - gohugoio/hugo
+    - attajak/attajak.github.io
