--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -22,7 +22,7 @@ jobs:
           extended: true
 
       - name: Update hugo modules
-        run: hugo mod get -u
+        run: hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
 
       - name: Tidy go.mod, go.sum
         run: hugo mod tidy
