--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,9 +6,13 @@ on:
   push:
     branches:
       - main
+  workflow_run:
+    workflows: ['Update hugo modules']
+    types:
+      - completed
 jobs:
   build_and_deploy:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
