--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -8,6 +8,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+permissions:
+  content: write
+
 jobs:
   update-hugo-modules:
     runs-on: ubuntu-latest
@@ -22,13 +25,20 @@ jobs:
           extended: true
 
       - name: Update hugo modules
-        run: hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
+        run: |
+          hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
+          hugo mod tidy
+          hugo mod graph
 
-      - name: Tidy go.mod, go.sum
-        run: hugo mod tidy
-
-      - name: List of Hugo modules
-        run: hugo mod graph
+      - name: Generate hugo-fixit component list
+        uses: hugo-fixit/action-component-list@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          comment_tag_name: HUGO_FIXIT_COMPONENTS
+          readme_path: 'README.md' # 'README.md,README.en.md'
+          # exclude_repos: 'fixit-bundle'
+          template: "- [{$repo.name}]({$repo.html_url})\\\n {$repo.description}"
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
