--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,15 +5,19 @@ repos:
     rev: v5.0.0
     hooks:
       - id: trailing-whitespace
-        args: [--markdown-linebreak-ext=md]
+        entry: trailing-whitespace-fixer
+        args: ['--markdown-linebreak-ext=md']
       - id: end-of-file-fixer
       - id: check-yaml
         args: ['--allow-multiple-documents']
-      - id: check-toml
-      - id: check-json
       - id: check-added-large-files
         args: ['--enforce-all']
-      - id: mixed-line-ending
-        args: ['--fix=auto']
+      - id: check-json
+      - id: check-toml
+      - id: double-quote-string-fixer
       - id: pretty-format-json
         args: ['--autofix', '--no-sort-keys']
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v3.1.0
+    hooks:
+      - id: add-trailing-comma
