--- a/config/development/hugo.toml
+++ b/config/development/hugo.toml
@@ -1,1 +1,24 @@
-baseURL = "http://localhost:1313/"
+# -------------------------------------------------------------------------------------
+# Hugo Configuration
+# See: https://gohugo.io/getting-started/configuration/
+# -------------------------------------------------------------------------------------
+
+title = "Hugo FixIt Blog"
+baseURL = "https://localhost:1313/"
+# theme = "FixIt"
+defaultContentLanguage = "en"
+languageCode = "en"
+hasCJKLanguage = true
+enableRobotsTXT = false
+enableEmoji = true
+enableGitInfo = true
+relativeURLs = true
+buildDrafts = true
+summaryLength = 150
+# ignore some build errors
+ignoreLogs = [
+  "error-get-remote-image",
+  "error-get-remote-json",
+  "error-remote-getjson",
+  "error-missing-instagram-accesstoken"
+]
