--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,10 +1,24 @@
-- title: Attajak Janrak
+- title: Jekyll
   description: GitHub Pages
   contentAdapters: true
   categories:
-    - Pages
+    - Jekyll
   collections:
-    - GitHub
+    - Static Site Generators
   totalStars: true # whether to count total stars
   repos:
     - attajak/attajak.github.io
+    - attajak/blog
+- title: Hugo
+  description: Hugo static site generators
+  contentAdapters: true
+  categories:
+    - Hugo
+  collections:
+    - Static Site Generators
+  totalStars: true
+  repos:
+    - attajak/attajak.web.app
+    - attajak/attajak.pages.dev
+    - attajak/attajak.vercel.app
+    - attajak/attajak.netlify.app
