--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,18 +8,20 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "monthly"
-    open-pull-requests-limit: 1000
-    assignees:
-      - "attajak"
-    labels:
-      - "dependencies"
-  - package-ecosystem: "gomod" # See documentation for possible values
-    directory: "/" # Location of package manifests
-    schedule:
       interval: "weekly"
     open-pull-requests-limit: 1000
     assignees:
       - "attajak"
     labels:
       - "dependencies"
+      - "actions"
+  - package-ecosystem: "gomod" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "daily"
+    open-pull-requests-limit: 1000
+    assignees:
+      - "attajak"
+    labels:
+      - "dependencies"
+      - "components"
