--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "index.js",
   "scripts": {
     "create": "hugo new content",
-    "build": "hugo --gc --minify --logLevel info",
+    "build": "HUGO_ENV=production hugo --gc --minify --logLevel info",
     "server": "hugo server -D -E -F -N -M -O --disableFastRender --logLevel info --bind 0.0.0.0 -b http://localhost:1313/",
-    "server:production": "npm run server -- --environment production",
+    "server:production": "HUGO_ENV=production npm run server -- --environment production",
     "server:development": "HUGO_MODULE_WORKSPACE=hugo.work npm run server -- --ignoreVendorPaths \"**\"",
     "update": "hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph"
   },
