--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -1,4 +1,4 @@
-name: Update modules
+name: Update hugo modules
 
 # Controls when the workflow will run
 on:
@@ -26,7 +26,7 @@ jobs:
 
       - name: Update hugo modules
         run: |
-          hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
+          hugo mod get -u # github.com/hugo-fixit/fixit-bundle@latest
           hugo mod tidy
           hugo mod graph
 
