--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,7 +90,7 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
   deploy-to-firebase:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: FirebaseExtended/action-hosting-deploy@v0
