--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,7 +13,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm ci && npm run build
+        with:
+          submodules: true
+          fetch-depth: 0
+      - name: Cache Hugo resources
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-hugo-resources
+        with:
+          path: resources
+          key: ${{ env.cache-name }}
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "^1.20.0"
+      - run: go version
+      - name: Cache Go Modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v3
+        with:
+          # use the environment variable HUGO_VERSION as the hugo version, if not set, use `latest`.
+          hugo-version: ${{ vars.HUGO_VERSION || 'latest' }}
+          extended: true
+      - name: Hugo build
+        run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
