--- a/config/production/hugo.toml
+++ b/config/production/hugo.toml
@@ -4,7 +4,7 @@
 # -------------------------------------------------------------------------------------
 
 title = "Attajak Janrak"
-baseURL = "https://attajak.web.app/"
+baseURL = "/"
 # theme = "FixIt"
 defaultContentLanguage = "en"
 languageCode = "en"
