--- a/config/development/hugo.toml
+++ b/config/development/hugo.toml
@@ -4,7 +4,7 @@
 # -------------------------------------------------------------------------------------
 
 title = "Hugo FixIt Blog"
-baseURL = "/"
+baseURL = "http://localhost:1313/"
 # theme = "FixIt"
 defaultContentLanguage = "en"
 languageCode = "en"
