--- a/config/_default/taxonomies.toml
+++ b/config/_default/taxonomies.toml
@@ -3,6 +3,7 @@
 # See: https://gohugo.io/content-management/taxonomies/#configure-taxonomies
 # -------------------------------------------------------------------------------------
 
+_merge = "shallow"
 category = "categories"
 tag = "tags"
 collection = "collections"
